--- a/backend/src/main/resources/META-INF/microprofile-config.properties
+++ b/backend/src/main/resources/META-INF/microprofile-config.properties
@@ -1,3 +1,13 @@
 # Microprofile server properties
 server.port=8080
 server.host=0.0.0.0
+# Database
+db.user=java
+db.password=java
+db.url=jdbc:postgresql://localhost:5432/swiss_budget
+db.schema=public
+db.driver=org.postgresql.Driver
+# custom jOOQ Generator
+ch.michu.tech.jooq.generator.dir=src/generated/jooq
+ch.michu.tech.jooq.generator.dialect=org.jooq.meta.postgres.PostgresDatabase
+ch.michu.tech.jooq.generator.package=ch.michu.tech.swissbudget.generated
