--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -86,9 +86,20 @@
       <version>${postgres.version}</version>
     </dependency>
     <dependency>
+      <artifactId>lombok</artifactId>
+      <groupId>org.projectlombok</groupId>
+      <scope>provided</scope>
+      <version>1.18.28</version>
+    </dependency>
+    <dependency>
       <artifactId>generator</artifactId>
       <groupId>ch.michu.tech.jooq</groupId>
       <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <artifactId>javax.mail</artifactId>
+      <groupId>com.sun.mail</groupId>
+      <version>1.6.2</version>
     </dependency>
 
     <!--    Test -->
