--- a/backend/src/main/resources/META-INF/microprofile-config.properties
+++ b/backend/src/main/resources/META-INF/microprofile-config.properties
@@ -8,6 +8,7 @@ db.url=jdbc:postgresql://localhost:5432/swiss_budget
 db.schema=public
 db.driver=org.postgresql.Driver
 # custom jOOQ Generator
-ch.michu.tech.jooq.generator.dir=src/generated/jooq
+ch.michu.tech.jooq.generator.dir=src/main/java
 ch.michu.tech.jooq.generator.dialect=org.jooq.meta.postgres.PostgresDatabase
-ch.michu.tech.jooq.generator.package=ch.michu.tech.swissbudget.generated
+ch.michu.tech.jooq.generator.package=ch.michu.tech.swissbudget.generated.jooq
+ch.michu.tech.jooq.generator.init.script=src/main/resources/sql/db-schema.sql
