--- a/backend/src/main/resources/META-INF/microprofile-config.properties
+++ b/backend/src/main/resources/META-INF/microprofile-config.properties
@@ -1,6 +1,11 @@
 # Microprofile server properties
 server.port=8080
 server.host=0.0.0.0
+cors.enabled=true
+cors.paths.0.path-pattern=*
+cors.paths.0.allow-origins=*
+cors.paths.0.allow-methods=GET,POST,PUT,DELETE,OPTIONS
+cors.paths.0.enabled=true
 # Database
 db.user=java
 db.password=java
@@ -12,3 +17,13 @@ ch.michu.tech.jooq.generator.dir=src/main/java
 ch.michu.tech.jooq.generator.dialect=org.jooq.meta.postgres.PostgresDatabase
 ch.michu.tech.jooq.generator.package=ch.michu.tech.swissbudget.generated.jooq
 ch.michu.tech.jooq.generator.init.script=src/main/resources/sql/db-schema.sql
+# admin mail
+ch.michu.tech.mail.templates.dir=backend/src/main/resources/mail-template
+# receiver
+ch.michu.tech.mail.admin.receiver=receiver@mail.com
+# sender
+ch.michu.tech.mail.sender.address=some-sender@mail.com
+ch.michu.tech.mail.smtp.user=someuser
+ch.michu.tech.mail.smtp.password=somepassword
+ch.michu.tech.mail.smtp.port=587
+ch.michu.tech.mail.smtp.server=smtp.mail.com
