--- a/backend/src/main/resources/logging.properties
+++ b/backend/src/main/resources/logging.properties
@@ -8,8 +8,8 @@ java.util.logging.FileHandler.append=true
 java.util.logging.FileHandler.limit=26214400
 java.util.logging.FileHandler.count=10
 .level=FINE
-#java.util.logging.SimpleFormatter.level=INFO
-io.helidon.common.HelidonConsoleHandler.level=INFO
+java.util.logging.SimpleFormatter.level=FINE
+io.helidon.common.HelidonConsoleHandler.level=FINE
 java.util.logging.FileHandler.level=FINE
 io.helidon.webserver.level=INFO
 io.helidon.config.level=INFO
@@ -22,3 +22,8 @@ jdk.event.level=INFO
 jakarta.mail.level=INFO
 javax.activation.level=INFO
 org.eclipse.angus.mail.level=INFO
+org.jboss.weld.level=INFO
+org.glassfish.level=INFO
+com.sun.level=INFO
+jakarta.level=INFO
+javax.mail.level=INFO
