--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -105,6 +105,12 @@
       <groupId>com.sun.mail</groupId>
       <version>1.6.2</version>
     </dependency>
+    <dependency>
+      <artifactId>commons-validator</artifactId>
+      <groupId>commons-validator</groupId>
+      <version>1.7</version>
+    </dependency>
+
 
     <!--    Test -->
     <dependency>
