--- a/backend/src/main/resources/META-INF/microprofile-config.properties
+++ b/backend/src/main/resources/META-INF/microprofile-config.properties
@@ -12,6 +12,11 @@ db.password=java
 db.url=jdbc:postgresql://localhost:5432/swiss_budget
 db.schema=public
 db.driver=org.postgresql.Driver
+# security
+session.stay.lifetime=30
+session.lifetime=1
+session.key=dGhpcyBpcyBhIGNvb2wga2V5Cg==
+session.mfa.lifetime=24
 # custom jOOQ Generator
 ch.michu.tech.jooq.generator.dir=src/main/java
 ch.michu.tech.jooq.generator.dialect=org.jooq.meta.postgres.PostgresDatabase
