--- a/backend/src/main/resources/META-INF/microprofile-config.properties
+++ b/backend/src/main/resources/META-INF/microprofile-config.properties
@@ -6,6 +6,7 @@ cors.paths.0.path-pattern=*
 cors.paths.0.allow-origins=*
 cors.paths.0.allow-methods=GET,POST,PUT,DELETE,OPTIONS
 cors.paths.0.enabled=true
+ch.michu.tech.production=true
 # Database
 db.user=java
 db.password=java
