fix bugs & work on transactions

--- a/backend/src/main/resources/META-INF/microprofile-config.properties
+++ b/backend/src/main/resources/META-INF/microprofile-config.properties
@@ -13,6 +13,7 @@ db.password=java
 db.url=jdbc:postgresql://localhost:5432/swiss_budget
 db.schema=public
 db.driver=org.postgresql.Driver
+db.time.long.breakpoint=50
 # security
 session.stay.lifetime=30
 session.lifetime=1
