do some work everywhere

--- a/backend/src/main/resources/META-INF/microprofile-config.properties
+++ b/backend/src/main/resources/META-INF/microprofile-config.properties
@@ -19,6 +19,7 @@ session.stay.lifetime=30
 session.lifetime=1
 session.key=dGhpcyBpcyBhIGNvb2wga2V5Cg==
 session.mfa.lifetime=24
+session.mfa.tries=5
 # custom jOOQ Generator
 ch.michu.tech.jooq.generator.dir=src/main/java
 ch.michu.tech.jooq.generator.dialect=org.jooq.meta.postgres.PostgresDatabase
