--- a/backend/src/main/resources/logging.properties
+++ b/backend/src/main/resources/logging.properties
@@ -1,6 +1,6 @@
 handlers=io.helidon.common.HelidonConsoleHandler,java.util.logging.FileHandler
 # HelidonConsoleHandler uses a SimpleFormatter subclass that replaces "!thread!" with the current thread
-java.util.logging.SimpleFormatter.format=%1$tY.%1$tm.%1$td %1$tH:%1$tM:%1$tS %4$s %3$s: %5$s%6$s%n
+java.util.logging.SimpleFormatter.format=%1$tY.%1$tm.%1$td %1$tH:%1$tM:%1$tS !thread! %4$s %3$s: %5$s%6$s%n
 java.util.logging.FileHandler.pattern=backend/logs/log.log
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
 java.util.logging.FileHandler.append=true
