a lot - date selector - lazyload transactions  - filter transactions  - fix bugs

--- a/backend/src/main/resources/META-INF/microprofile-config.properties
+++ b/backend/src/main/resources/META-INF/microprofile-config.properties
@@ -14,6 +14,7 @@ db.url=jdbc:postgresql://localhost:5432/swiss_budget
 db.schema=public
 db.driver=org.postgresql.Driver
 db.time.long.breakpoint=50
+db.limit.page.size=6
 # security
 session.stay.lifetime=30
 session.lifetime=1
