--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -22,7 +22,7 @@
             <id>make-index</id>
           </execution>
         </executions>
-        <groupId>org.jboss.jandex</groupId>
+        <groupId>io.smallrye</groupId>
       </plugin>
 
       <plugin>
@@ -50,10 +50,6 @@
       <groupId>io.helidon.microprofile.config</groupId>
     </dependency>
     <dependency>
-      <artifactId>helidon-microprofile-cors</artifactId>
-      <groupId>io.helidon.microprofile</groupId>
-    </dependency>
-    <dependency>
       <artifactId>helidon-microprofile-scheduling</artifactId>
       <groupId>io.helidon.microprofile.scheduling</groupId>
     </dependency>
@@ -68,12 +64,17 @@
     </dependency>
     <dependency>
       <artifactId>jandex</artifactId>
-      <groupId>org.jboss</groupId>
+      <groupId>io.smallrye</groupId>
       <scope>runtime</scope>
     </dependency>
     <dependency>
       <artifactId>jakarta.activation-api</artifactId>
       <groupId>jakarta.activation</groupId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <artifactId>helidon-logging-jul</artifactId>
+      <groupId>io.helidon.logging</groupId>
       <scope>runtime</scope>
     </dependency>
 
@@ -97,7 +98,7 @@
       <artifactId>lombok</artifactId>
       <groupId>org.projectlombok</groupId>
       <scope>provided</scope>
-      <version>1.18.28</version>
+      <version>1.18.30</version>
     </dependency>
     <dependency>
       <artifactId>generator</artifactId>
@@ -138,8 +139,8 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <artifactId>helidon-microprofile-tests-junit5</artifactId>
-      <groupId>io.helidon.microprofile.tests</groupId>
+      <artifactId>helidon-microprofile-testing-junit5</artifactId>
+      <groupId>io.helidon.microprofile.testing</groupId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -156,11 +157,14 @@
     <artifactId>helidon-mp</artifactId>
     <groupId>io.helidon.applications</groupId>
     <relativePath/>
-    <version>3.2.2</version>
+    <version>4.0.1</version>
   </parent>
 
   <properties>
-    <jooq.version>3.17.14</jooq.version>
+    <java.version>21</java.version>
+    <jooq.version>3.18.7</jooq.version>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
     <postgres.version>42.4.0</postgres.version>
   </properties>
 
