WIP work on framework

--- a/backend/src/main/resources/logging.properties
+++ b/backend/src/main/resources/logging.properties
@@ -28,3 +28,5 @@ com.sun.level=INFO
 jakarta.level=INFO
 javax.mail.level=INFO
 org.jooq.level=INFO
+sun.net.www.protocol.http.level=INFO
+ch.michu.tech.swissbudget.framework.data.level=INFO
