--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -33,8 +33,7 @@
           </dbConfigPath>
         </configuration>
         <groupId>ch.michu.tech.jooq</groupId>
-
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
       </plugin>
     </plugins>
   </build>
@@ -113,7 +112,7 @@
     <dependency>
       <artifactId>commons-validator</artifactId>
       <groupId>commons-validator</groupId>
-      <version>1.7</version>
+      <version>1.8.0</version>
     </dependency>
     <dependency>
       <artifactId>jjwt</artifactId>
@@ -131,7 +130,6 @@
       <version>1.1.1</version>
     </dependency>
 
-
     <!--    Test -->
     <dependency>
       <artifactId>junit-jupiter-api</artifactId>
@@ -147,6 +145,24 @@
       <artifactId>hamcrest-all</artifactId>
       <groupId>org.hamcrest</groupId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <artifactId>mockito-core</artifactId>
+      <groupId>org.mockito</groupId>
+      <scope>test</scope>
+      <version>5.8.0</version>
+    </dependency>
+    <dependency>
+      <artifactId>h2</artifactId>
+      <groupId>com.h2database</groupId>
+      <scope>test</scope>
+      <version>2.2.224</version>
+    </dependency>
+    <dependency>
+      <artifactId>json</artifactId>
+      <groupId>org.json</groupId>
+      <scope>test</scope>
+      <version>20231013</version>
     </dependency>
   </dependencies>
 
