write tests and fix bugs

--- a/backend/src/main/resources/META-INF/microprofile-config-test.properties
+++ b/backend/src/main/resources/META-INF/microprofile-config-test.properties
@@ -29,3 +29,4 @@ ch.michu.tech.mail.smtp.password=password
 ch.michu.tech.mail.smtp.port=587
 ch.michu.tech.mail.smtp.server=relay.mail-provider.com
 java.util.logging.config.file=src/test/resources/logging.properties
+ch.michu.tech.test.max.request=120
