--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -132,7 +132,7 @@
 
     <!--    Test -->
     <dependency>
-      <artifactId>junit-jupiter-api</artifactId>
+      <artifactId>junit-jupiter-engine</artifactId>
       <groupId>org.junit.jupiter</groupId>
       <scope>test</scope>
     </dependency>
