--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -102,7 +102,7 @@
     <dependency>
       <artifactId>generator</artifactId>
       <groupId>ch.michu.tech.jooq</groupId>
-      <version>0.0.1-SNAPSHOT</version>
+      <version>1.0.0</version>
     </dependency>
     <dependency>
       <artifactId>javax.mail</artifactId>
