--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -18,6 +18,8 @@ jobs:
           node-version: '20.x'
           cache: 'npm'
       - name: Install with npm
-        run: npm --prefix frontend ci
+        working-directory: ./frontend
+        run: npm ci
       - name: Build with npm
-        run: npm --prefix frontend run build
+        working-directory: ./frontend
+        run: npm run build
