always use zoned time

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -22,7 +22,7 @@ jobs:
         run: mvn -B install -DskipTests
       - name: Build with Maven
         working-directory: ./backend
-        run: mvn -B package
+        run: mvn -B package -DskipTests
       - name: Run tests
         working-directory: ./backend
         run: mvn -B test
