--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -9,6 +9,10 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./backend
+
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 21
@@ -21,10 +25,8 @@ jobs:
         working-directory: ./jooq-code-generator
         run: mvn -B install -DskipTests
       - name: Build with Maven
-        working-directory: ./backend
         run: mvn -B package -DskipTests
       - name: Run tests
-        working-directory: ./backend
         run: mvn -B test
 
       # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
