--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
 
     steps:
       - uses: actions/checkout@v3
@@ -18,8 +21,6 @@ jobs:
           node-version: '20.x'
           cache: 'npm'
       - name: Install with npm
-        working-directory: ./frontend
         run: npm ci
       - name: Build with npm
-        working-directory: ./frontend
         run: npm run build
