navigate working dir

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -9,12 +9,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./frontend
 
     steps:
       - uses: actions/checkout@v3
+      - name: nagivating to working dir
+        run: cd ./frontend
       - name: Use Node.js 20.x
         uses: actions/setup-node@v3
         with:
