--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -94,6 +94,11 @@
       <version>${postgres.version}</version>
     </dependency>
     <dependency>
+      <artifactId>HikariCP</artifactId>
+      <groupId>com.zaxxer</groupId>
+      <version>5.1.0</version>
+    </dependency>
+    <dependency>
       <artifactId>lombok</artifactId>
       <groupId>org.projectlombok</groupId>
       <scope>provided</scope>
