--- a/backend/src/main/resources/META-INF/microprofile-config-test.properties
+++ b/backend/src/main/resources/META-INF/microprofile-config-test.properties
@@ -12,7 +12,8 @@ db.driver=org.h2.Driver
 db.time.long.breakpoint=75
 db.limit.page.size=3
 db.setup.script=src/main/resources/sql/db-schema.sql
-db.max.pool.size=2
+# needs to be at least 3 (1. test instance, 2. backend root, 3. test requests)
+db.max.pool.size=3
 # security
 session.stay.lifetime=30
 session.lifetime=1
