--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -10,6 +10,9 @@
           "style": "scss",
           "standalone": false,
           "skipTests": true
+        },
+        "@schematics/angular:service": {
+          "skipTests": true
         }
       },
       "root": "",
